--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: test-mongo
   become: yes  # 切换到root用户下执行
+  vars:
+    mongo_install_path: /usr/local/soft_new
   roles:
-    - hanqunfeng.mongodb-install
+    - mongodb-install
