--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,8 @@ galaxy_info:
   author: hanqunfeng
   description: CentOS 7&8 MongoDB install role
   company: hanqf
-  version: 1.0.0
+  namespace: hanqunfeng
+  role_name: mongodb-install
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
