--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,3 +6,5 @@ mongo_replica_set_name: rs0
 mongo_port: 27017
 # 数据、日志、配置文件、keyFile存储路径
 mongo_directory: /mongodb
+# mongosh version
+mongosh_version: 2.1.5
